updated style.js and index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <h1 id="header1">Module 4: Coding Quiz</h1>
+    <h2 style="float:right">You have <span id="timeleft">seconds left</span></h2>
 
     <div id="quizContents">
         <div id="questionDiv"></div>
         <div id="choicesDiv"></div>
     </div>
+
+    <h2 id="messageElem"></h2>
+    <button id="nextQuestionBtn">Next Question</button>
 
     <button id="startBtn">Start Quiz</button>
 
